# colorx

./: .gitignore  CMakeLists.txt  README.md  colorx  main.cpp
Shader/: nodeShader.fs  nodeShader.vs
include/: Camera.h  Colorx.h  ContextManager.h  Core.h  EventHandler.h  Light.h  Mesh.h  Model.cpp  Model.h  SceneManager.cpp  SceneManager.h  Shader.h  svpng.h
opengl_helper/assimp/: CMakeLists.txt  assimp.pc  revision.h
opengl_helper/glfw/: cmake_uninstall.cmake
opengl_helper/glfw/examples/boing.app/Contents/: Info.plist
opengl_helper/glfw/examples/gears.app/Contents/: Info.plist
opengl_helper/glfw/examples/heightmap.app/Contents/: Info.plist
opengl_helper/glfw/examples/particles.app/Contents/: Info.plist
opengl_helper/glfw/examples/sharing.app/Contents/: Info.plist
opengl_helper/glfw/examples/simple.app/Contents/: Info.plist
opengl_helper/glfw/examples/splitview.app/Contents/: Info.plist
opengl_helper/glfw/examples/wave.app/Contents/: Info.plist
opengl_helper/glfw/tests/empty.app/Contents/: Info.plist
opengl_helper/glfw/tests/gamma.app/Contents/: Info.plist
opengl_helper/glfw/tests/icon.app/Contents/: Info.plist
opengl_helper/glfw/tests/inputlag.app/Contents/: Info.plist
opengl_helper/glfw/tests/joysticks.app/Contents/: Info.plist
opengl_helper/glfw/tests/opacity.app/Contents/: Info.plist
opengl_helper/glfw/tests/tearing.app/Contents/: Info.plist
opengl_helper/glfw/tests/threads.app/Contents/: Info.plist
opengl_helper/glfw/tests/timeout.app/Contents/: Info.plist
opengl_helper/glfw/tests/title.app/Contents/: Info.plist
opengl_helper/glfw/tests/windows.app/Contents/: Info.plist
resource/nanosuit/: nanosuit.mtl
src/: Colorx.cpp  EventHandler.cpp  Light.cpp  Mesh.cpp  Model.cpp  SceneManager.cpp  main.cpp
